--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: bash setup.sh
+        run: bash Task_2/setup.sh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
