--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: bash Task_2/setup.sh
+        run: |
+          sudo su
+          bash Task_2/setup.sh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
